Implemented reset-password backend api.
