# backend/pages/user/controller/user.controller.js
@@ -3,7 +3,9 @@ const {
     createLocalUser,
     localUserLogin,
     updateUserInfo,
-    updateAuthority
+    updateAuthority,
+    resetPassword,
+    changePassword
 } = require('../service/user.service');
 
 exports.getAllUser = async (req, res) => {
@@ -55,6 +57,33 @@ exports.updateAuthority = async (req, res) => {
     try {
         response.data = await updateAuthority(req.body);
     } catch (e) {
+        response.statusCode = 400;
+        response.errors = JSON.parse(e.message);
+    }
+    return res.status(response.statusCode).json(response);
+}
+
+exports.resetPassword = async(req, res) =>{
+    const response = {data: null, errors: null, statusCode: 200}
+    try {
+        const resetEmail = req.body.email;
+        console.log('email', resetEmail);
+        response.data = await resetPassword(resetEmail);
+    } catch (e) {
+        response.statusCode = 400;
+        response.errors = JSON.parse(e.message);
+    }
+    return res.status(response.statusCode).json(response);
+}
+
+exports.changePassword = async (req, res) =>{
+    const response = {data: null, errors: null, statusCode: 200}
+    try {
+        const { token } = req.params;
+        const passwordInfo = { newPassword, confirmPassword } = req.body;
+        response.data = await changePassword(token, passwordInfo);
+    } catch (e) {
+        console.log('error message', e);
         response.statusCode = 400;
         response.errors = JSON.parse(e.message);
     }
