# backend/swagger.json
@@ -129,173 +129,6 @@
           }
         }
       }
-    },
-    "/api/v1/contact-us": {
-      "post": {
-        "tags": [
-          "Contact"
-        ],
-        "parameters": [
-          {
-            "name": "contact",
-            "in": "body",
-            "description": "Contact us",
-            "schema": {
-              "$ref": "#/definitions/ContactUs"
-            }
-          }
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/response"
-            }
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "Contact"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/response"
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/category": {
-      "get": {
-        "tags": [
-          "Category"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/response"
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Category"
-        ],
-        "parameters": [
-          {
-            "name": "Category",
-            "in": "body",
-            "description": "Contact us",
-            "schema": {
-              "$ref": "#/definitions/Category"
-            }
-          }
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/response"
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/category/{categoryId}": {
-      "put": {
-        "tags": [
-          "Category"
-        ],
-        "parameters": [
-          {
-            "name": "categoryId",
-            "in": "path",
-            "required": true,
-            "type": "integer"
-          },
-          {
-            "name": "Category",
-            "in": "body",
-            "description": "Contact us",
-            "schema": {
-              "$ref": "#/definitions/UpdateCategory"
-            }
-          }
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/response"
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Category"
-        ],
-        "parameters": [
-          {
-            "name": "categoryId",
-            "in": "path",
-            "required": true,
-            "type": "integer"
-          }
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/response"
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/users/update/user-authorities": {
-      "put": {
-        "tags": [
-          "Users"
-        ],
-        "parameters": [
-          {
-            "name": "Category",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/UpdateAuthority"
-            }
-          }
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/response"
-            }
-          }
-        }
-      }
     }
 
   },
